2000-05-05  Michael Natterer  <mitch@gimp.org>

	Made the document index a bit more like the rest of the dialogs:

	* app/commands.[ch]
	* app/menus.c: added a cmd_callback instead of calling a function
	in docindex.c directly.

	* app/gimprc.c
	* app/session.[ch]: added proper session management.

	* app/app_procs.c
	* app/docindex.[ch]
	* app/docindexif.[ch]: removed another bunch of useless variables
	and functions. Removed the status bar because it was not telling
	very useful stuff. Removed the window position/size from the
	"ideas" file.

	Note: you have to either remove your ~/.gimp-1.1/ideas file or
	remove it's first line or experience a nice endless loop :)

2000-05-05  Michael Natterer  <mitch@gimp.org>

	* app/docindex.[ch]
	* app/docindexif.[ch]: call dialog_[un]register(). Fixes #10284.
	Also removed some useless stuff.

	* app/gdisplay_color_ui.c
	* modules/cdisplay_gamma.c
	* modules/cdisplay_highcontrast.c: call dialog_[un]register().

2000-05-05  Jay Cox  <jaycox@earthlink.net>

	* app/pixel_processor.c: try to minimize the overhead of
	multiprocessor support.  This should fix bug #9296
	but it has not been tested on a dual processor machine.

2000-05-04  Tor Lillqvist  <tml@iki.fi>

	* gimprc.win32: Replace "color-cube" by "min-colors".

	* */makefile.{cygwin,msc}: Updates. Install to /install/gimp.

	* libgimp/gimp.def: Add gimp_min_colors.

	* modules/cdisplay_highcontrast.c: Include gimpmath.h instead of
	math.h. Use G_PI instead of M_PI.

2000-05-04  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_gamma.c: 
	* modules/cdisplay_highcontrast.c: use gimpui functions to set
	up the dialogs

Wed May  3 14:49:09 PDT 2000 Manish Singh <yosh@gimp.org>

	* gimp.m4: help spacing correction

2000-05-03  Michael Natterer  <mitch@gimp.org>

	* app/layers_dialog.c: removed layers_dialog_idle_set_layer_focus()
	because Wolfgang pointed out that it caused bad segfaults. This
	fixes #10139 and #9844. OTOH this brings back the bug that the